// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should show administration menu if the user has the rights 1`] = `
<ul
  className="global-navbar-menu pull-left"
>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/projects"
    >
      projects.page
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/issues",
          "query": Object {
            "resolved": "false",
          },
        }
      }
    >
      issues.page
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/coding_rules"
    >
      coding_rules.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/profiles"
    >
      quality_profiles.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/quality_gates",
        }
      }
    >
      quality_gates.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/admin"
    >
      layout.settings
    </Link>
  </li>
</ul>
`;

exports[`should work with extensions 1`] = `
<ul
  className="global-navbar-menu pull-left"
>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/projects"
    >
      projects.page
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/issues",
          "query": Object {
            "resolved": "false",
          },
        }
      }
    >
      issues.page
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/coding_rules"
    >
      coding_rules.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/profiles"
    >
      quality_profiles.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/quality_gates",
        }
      }
    >
      quality_gates.page
    </Link>
  </li>
  <li
    className="dropdown"
  >
    <a
      className="dropdown-toggle"
      data-toggle="dropdown"
      href="#"
      id="global-navigation-more"
    >
      more
       
      <span
        className="icon-dropdown"
      />
    </a>
    <ul
      className="dropdown-menu"
    >
      <li
        key="foo"
      >
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/extension/foo"
        >
          Foo
        </Link>
      </li>
    </ul>
  </li>
</ul>
`;
